--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@antfu/eslint-config": "^1.1.0",
     "@nuxt/devtools": "latest",
     "eslint": "^8.53.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "nuxt": "^3.8.1",
     "sass": "^1.69.5",
     "vue": "^3.3.8",
