--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+  "dependencies": {
+    "@nuxt/ui": "^2.10.0"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^1.1.0",
     "@nuxt/devtools": "latest",
