--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/ui": "^2.10.0"
+    "@nuxt/ui": "^2.10.0",
+    "reset-css": "^5.0.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^1.1.0",
