--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.10.0",
-    "reset-css": "^5.0.2"
+    "reset-css": "^5.0.2",
+    "vue3-carousel": "^0.3.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^1.1.0",
